--- a/链表/1.html
+++ b/链表/1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./19. 删除链表的倒数第 N 个结点.js"></script>
+    <script src="./2181. 合并零之间的节点.js"></script>
 </head>
 
 <body>
