--- a/链表/1.html
+++ b/链表/1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./237. 删除链表中的节点.js"></script>
+    <script src="./328. 奇偶链表.js"></script>
 </head>
 
 <body>
