--- a/双指针/1.html
+++ b/双指针/1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./2149. 按符号重排数组.js"></script>
+    <script src="./"></script>
 </head>
 
 <body>
