--- a/二叉树/1.html
+++ b/二叉树/1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./102. 二叉树的层序遍历.js"></script>
+    <script src="./226. 翻转二叉树.js"></script>
 </head>
 
 <body>
