--- a/二叉树/1.html
+++ b/二叉树/1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./257. 二叉树的所有路径.js"></script>
+    <script src="./113. 路径总和 II.js"></script>
 </head>
 
 <body>
