为了更美好的未来

--- a/二叉树/1.html
+++ b/二叉树/1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./617. 合并二叉树.js"></script>
+    <script src="./700. 二叉搜索树中的搜索.js"></script>
 </head>
 
 <body>
