--- a/二叉树/1.html
+++ b/二叉树/1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./530. 二叉搜索树的最小绝对差.js"></script>
+    <script src="./501. 二叉搜索树中的众数.js"></script>
 </head>
 
 <body>
