--- a/二叉树/1.html
+++ b/二叉树/1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./450. 删除二叉搜索树中的节点.js"></script>
+    <script src="./235. 二叉搜索树的最近公共祖先.js"></script>
 </head>
 
 <body>
